--- a/src/locales/pt-BR.json
+++ b/src/locales/pt-BR.json
@@ -363,7 +363,7 @@
       "addSubscriberGlobalSuccess": "Inscrição global {{type}} `{{name}}` adicionada com sucesso ao feed <{{link}}>.",
       "removeGlobalSubscriberExists": "Esta inscrição não está globalmente inscrito no feed <{{link}}>.",
       "removeGlobalSubscriberSuccess": "Removeu com sucesso a inscrição global de {{type}} `{{name}}` do feed <{{link}}>",
-      "removeAnySubscriberNone": "Não há inscritos para remover no feed <{{link}}>.",
+      "removeAnySubscriberNone": "Não há inscritos no feed <{{link}}>.",
       "invalidRoleOrUser": "Esse não é um cargo válido ou usuário válido. Tente novamente, ou digite `exit` para cancelar.",
       "multipleRoles": "Existem vários cargos com esse nome. Mencione o cargo, digite outro cargo/usuario, ou digite `exit` para cancelar.",
       "selectedRoleDescription": "**selecionado**: {{name}}\n**Feed Título:** {{feedTitle}}\n**Feed Link:** {{feedLink}}\n\nSelecione uma opção digitando o numero, ou digite `exit` para cancelar.\u200b\n\u200b\n",
